# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
examples/: async_example.py  bulk_lookup.py  domain_lookup.py  ip_lookup.py  tlds_catalog.py
src/rdapapi/: __init__.py  client.py  exceptions.py  models.py
tests/: test_async.py  test_client.py  test_models.py
