[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdapapi"
dynamic = ["version"]
description = "Python SDK for the RDAP API — look up domains, IPs, ASNs, nameservers, and entities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "RDAP API", email = "support@rdapapi.io" }]
keywords = ["rdap", "whois", "domain", "ip", "asn", "dns", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://rdapapi.io"
Documentation = "https://rdapapi.io/docs"
Repository = "https://github.com/rdapapi/python-sdk"
"Get API Key" = "https://rdapapi.io/register"

[tool.hatch.version]
path = "src/rdapapi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rdapapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "ARG",   # unused arguments
    "T201",  # print statements
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]
